# trajokit

./: .gitignore  README.md  pyproject.toml  tasks.jsonl  tasks_100.jsonl  tasks_django.jsonl
docs/: install.md  validation.md
docs/results/: Qwen__Qwen3-Coder-30B-A3B-Instruct.trajokit-100-v2.json  Qwen__Qwen3-Coder-30B-A3B-Instruct.trajokit-100.json  Qwen__Qwen3-Coder-30B-A3B-Instruct.trajokit-500.json
recipes/verl/: agent_loop.yaml  run_8b_15steps.sh  run_8b_smoke.sh
scripts/: bench.py  make_verl_dataset.py  negcontrol.py  official_eval.py  poscontrol.py  run_verifier.py  show_traj.py  smoke.py
src/trajokit/: __init__.py  cache.py  judges.py  loop.py  orchestrator.py  policy.py  sandbox.py  types.py  verifiers.py
src/trajokit/adapters/: verl.py  verl_agent_loop.py
src/trajokit/datasets/: swebench.py
tests/: test_cache.py  test_masking.py  test_verl_adapter.py  test_verl_shim.py
