[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trajokit"
version = "0.0.1"
description = "Sandboxed agent rollouts for RL: agent loop + env execution -> token trajectories with loss masks"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
hf = ["transformers>=4.51"]
bedrock = ["boto3>=1.34"]
swebench = ["datasets>=2.19", "swebench>=3.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/trajokit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
